# ml-snowflake-template

./: .env.example  .gitignore  .snowflakeignore  README.md  TODO.md  chargebacks_disputes_analysis.ipynb  dev.ipynb  pyproject.toml  snowflake.yml
.archive/: pltv.ipynb
.archive/pltv_old/: __init__.py  constants.py  feature_store.py  new_queries.sql  queries.py
.archive/src/: connection.py  constants.py  typing.py
.archive/src/services/: feature_store_service.py
.archive/src/utils/: encryption.py  model_utils.py
.github/workflows/: deploy-pltv.yml  deploy-vbb.yml
.snowflake/: config.toml
app/: pltv.ipynb
app/projects/: __init__.py
app/projects/core/: connection.py
app/projects/core/chargebacks_disputes_analysis/: SUMMARY.md  main.py  notebook.ipynb
app/projects/pltv/: __init__.py  config.py  constants.py  dataset.py  feature_engineering.py  feature_store.py  main.py  model.py  objects.py  pipeline.py  session.py  sproc.py
app/projects/pltv/core/: __init__.py  base_models.py  config.py  enums.py
app/projects/pltv/data/: __init__.py  dataset.py  loader.py  (+3 more)
app/projects/vbb/: __init__.py  config.py  main.py  sproc.py
app/src/: constants.py  environment.py  shared_config.py  writers.py
app/src/base_models/: evaluation.py
app/src/connection/: session.py
app/src/data/: __init__.py  base_loader.py  result_collector.py
app/src/pipeline/: __init__.py  prophet.py  xgboost.py
app/src/services/: feature_store_service.py
app/src/sproc/: __init__.py  base.py
app/src/utils/: encryption.py  model.py  notebook.py  slack.py  typing.py
app/src/writers/: __init__.py  local.py  protocol.py  snowflake.py  types.py
docs/: shiem_pltv.py
projects/: __init__.py
projects/pltv/: __init__.py  pyproject.toml
scripts/: deploy.sh
setup/: setup_infrastructure.sql  setup_key_pair.sql.example
setup/pltv/: tasks.sql
setup/vbb/: tasks.sql
tests/: test_session.py
tests/pltv/: test_pltv_session.py
(+18 files in other folders)
